# river

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: draft-pdf.yml
cmake/Modules/: FindArrow.cmake
cpp/: CMakeLists.txt
cpp/cmake/Modules/: FindParquet.cmake
cpp/ingester/: CMakeLists.txt
cpp/ingester/src/: CMakeLists.txt  ingester.cpp  ingester.h  ingester_http_server.cpp  ingester_http_server.h  ingester_main.cpp  ingester_settings.h  ingester_settings_test.cpp  ingester_test.cpp  ingester_test_main.cpp  ingester_test_utils.h  ingester_threadpool.h  ingester_threadpool_test.cpp  integration_test.cpp
cpp/ingester/src/example_settings/: example.json
cpp/src/: CMakeLists.txt  reader.cpp  reader.h  redis.cpp  redis.h  redis_writer_commands.cpp  redis_writer_commands.h  river-config.cmake.in  river-modules.cmake.in  river.pc.in  schema.cpp  schema.h  writer.cpp  writer.h
cpp/src/compression/: compressor.cpp  compressor.h  compressor_types.h  zfp_compressor.cpp  zfp_compressor_noop.cpp
cpp/src/net/: sockcompat.h
cpp/src/redismodule/: CMakeLists.txt  river_redismodule.c  river_redismodule.cpp
cpp/src/tests/: compressor_test.cpp  integration_test.cpp  reader_test.cpp  writer_test.cpp
cpp/src/tools/: river_benchmark.cpp  river_example.cpp  river_reader.cpp  river_writer.cpp
docs/: CMakeLists.txt  README.md  conf.py  index.html  index.rst  install.rst  intro.rst  performance.rst  python.rst  tutorial.rst
docs/api/: cpp.rst  index.rst
docs/api/cpp/: Doxyfile.in
docs/docs/: .buildinfo  contributing.html  cpp.html  genindex.html  index.html  install.html  intro.html  objects.inv  performance.html  py-modindex.html  python.html  search.html  searchindex.js  tutorial.html
docs/docs/.doctrees/: contributing.doctree  cpp.doctree  environment.pickle  index.doctree  install.doctree  intro.doctree  performance.doctree  python.doctree  tutorial.doctree
docs/docs/.doctrees/api/: cpp.doctree  index.doctree  python.doctree
docs/docs/_sources/: contributing.rst.txt  install.rst.txt
docs/docs/_sources/api/: index.rst.txt
docs/docs/api/: cpp.html  index.html  python.html
ingester/: CMakeLists.txt
ingester/src/: CMakeLists.txt  ingester.cpp  ingester.h  ingester_main.cpp  ingester_test.cpp  ingester_threadpool.h  ingester_threadpool_test.cpp  integration_test.cpp
manuscript/: paper.bib  paper.md
matlab/: MexInterface.m  README.md  RedisConnection.m  StreamReader.m  StreamSchema.m  StreamWriter.m  build_all.m  class_handle.hpp  mex_helpers.hpp  redis_connection_mex.cpp  run_tests.m  str2fun.m  stream_reader_mex.cpp  stream_schema_helper.h  stream_schema_mex.cpp  stream_writer_mex.cpp
matlab/tests/: test_fixed_width_bytes.m  test_read_write.m  test_simple_schema.m
performance/: performance.ipynb  performance.py
python/: CMakeLists.txt  criver.pxd  exception_handling.h  river.pyi  river.pyx  setup.py.in
python/river/: __init__.py
scripts/: river_ingester.service
src/: CMakeLists.txt  CMakeLists.txt.in.cxxopts  CMakeLists.txt.in.fmt  CMakeLists.txt.in.googletest  CMakeLists.txt.in.hiredis  CMakeLists.txt.in.json  reader.cpp  reader.h  redis.cpp  redis.h  river-config.cmake.in  river.h  river.pc.in  river_ingester.service  schema.cpp  schema.h  writer.cpp  writer.h
src/tests/: integration_test.cpp  reader_test.cpp  redis_test.cpp  river_test.cpp  writer_test.cpp
src/tools/: river_benchmark.cpp  river_example.cpp  river_reader.cpp  river_writer.cpp  uuid.h
